--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: My website
 
 # Your name to show in the footer
-author: Some Person
+author: seokju.Park
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -21,10 +21,12 @@ author: Some Person
 
 navbar-links:
   About Me: "aboutme"
+  Project: "Project"
+  Blog: "Blog"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  
 
 ################
 # --- Logo --- #
@@ -297,6 +299,15 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  
+  jekyll-archives:
+  enabled: [categories, tags]
+  layouts:
+    category: category
+    tag: tag
+  permalinks:
+    tag: /tags/:name/
+    category: /categories/:name/
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
