--- a/_config.yml
+++ b/_config.yml
@@ -233,17 +233,18 @@ footer-hover-col: "#0085A1"
 # (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository,
 # (2) Install the giscus app in your repository (details at https://giscus.app),
 # (3) Fill in *all* the parameters below
-# See more details about giscus and each of the following parameters at https://giscus.app
+# See more details about giscus and each of the following parameters at
+# Giscus options ›  https://giscus.app
 #giscus:
 #  hostname: giscus.app # Replace with your giscus instance's hostname if self-hosting
-#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  repository-id: # ID of your repository, retrieve this info from https://giscus.app
-#  category: Announcements # Category name of your GitHub Discussion posts
-#  category-id: # ID of your category, retrieve this info from https://giscus.app
-#  mapping: pathname
-#  reactions-enabled: 1
-#  emit-metadata: 0
-#  theme: light
+  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
+  repository-id: # ID of your repository, retrieve this info from https://giscus.app
+  category: Announcements # Category name of your GitHub Discussion posts
+  category-id: # ID of your category, retrieve this info from https://giscus.app
+  mapping: pathname
+  reactions-enabled: 1
+  emit-metadata: 0
+  theme: light
 
 ################
 # --- Misc --- #
@@ -299,6 +300,16 @@ exclude:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  
+  # -----------------Add Section 
+jekyll-archives:
+  enabled: [categories, tags]
+  layouts:
+    category: category
+    tag: tag
+  permalinks:
+    tag: /tags/:name/
+    category: /categories/:name/
   
 
 # Beautiful Jekyll / Dean Attali
