--- a/.github/workflows/style-lint.yml
+++ b/.github/workflows/style-lint.yml
@@ -3,7 +3,7 @@ name: Style Lint
 on:
   push:
     branches:
-      - master
+      - main_edu
       - "hotfix/*"
     paths: ["_sass/**/*.scss"]
   pull_request:
