--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,11 @@ navbar-links:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
 
+
+
+
+
+url: "sjpark2free.github.io"
 ################
 # --- Logo --- #
 ################
