--- a/_config.yml
+++ b/_config.yml
@@ -306,7 +306,7 @@ defaults:
       path: "" # any file that's not a post will be a "page" layout by default
     values:
       layout: "page"
-      permalink: /:title/
+      # permalink: /:title/
 
 # Exclude these files from production site
 exclude:
