--- a/_config.yml
+++ b/_config.yml
@@ -265,6 +265,15 @@ giscus:
   reactions-enabled: 1
   emit-metadata: 0
   theme: light
+  
+# Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
+assets:
+  self_host:
+    enabled: # boolean, keep empty means false
+    # specify the Jekyll environment, empty means both
+    # only works if `assets.self_host.enabled` is 'true'
+    env: production # [development | production]
+  
 
 ################
 # --- Misc --- #
