--- a/_config.yml
+++ b/_config.yml
@@ -275,7 +275,7 @@ assets:
     # only works if `assets.self_host.enabled` is 'true'
     env: production # [development | production]
   
-  remote_theme : ""
+  #remote_theme : ""
 
 ################
 # --- Misc --- #
