--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
 
 
 
- url: "https://sjpark2free.github.io"
+#url: "https://sjpark2free.github.io"
  # baseurl: ""
 ################
 # --- Logo --- #
